[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/components/player/laser_shot/textures/ray/laser_shot5.png" type="Texture" id=1]
[ext_resource path="res://scenes/components/player/laser_shot/LaserShotRay.gd" type="Script" id=2]

[node name="LaserShotRay" type="Area2D"]
collision_layer = 2097152
collision_mask = 142746624
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 3, 2, 3, -4, 876, -4, 876, 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 3, -1 )
scale = Vector2( 13.65, 1 )
z_index = 1
texture = ExtResource( 1 )
offset = Vector2( 32, -6.67275 )
__meta__ = {
"_edit_lock_": true
}

[node name="RayCast" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3, -1 )
enabled = true
cast_to = Vector2( 800, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[connection signal="area_entered" from="." to="." method="_on_LaserShotRay_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_LaserShotRay_body_entered"]
